removed unwanted eb initialization

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to Elastic Beanstalk
 on:
   push:
     branches:
-      - main  # You can change to any branch you want to auto-deploy
+      - main  # Or any branch you prefer
 
 jobs:
   deploy:
@@ -29,6 +29,5 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ap-south-1
         run: |
-          eb init getting-started --platform node.js --region $AWS_REGION <<< "Y"
           eb use getting-started-env
           eb deploy
