--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 node_modules
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
-!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.config.yml
 !.elasticbeanstalk/*.global.yml
